--- a/view/create.ejs
+++ b/view/create.ejs
@@ -55,12 +55,17 @@
 
                             <div class="form-group mt-2">
                                 <label for="start">Start Date</label>
-                                <input type="datetime-local" name="Start" id="Start" class="form-control" required>
+                                <input type="datetime-local" name="start" id="start" class="form-control" required>
                             </div>
 
                             <div class="form-group mt-2">
-                                <label for="start">End Date</label>
+                                <label for="end">End Date</label>
                                 <input type="datetime-local" name="end" id="end" class="form-control" required>
+                            </div>
+
+                            <div class="form-group mt-2">
+                                <label for="user">User</label>
+                                <input type="text" name="user" id="user" class="form-control" required>
                             </div>
                       
                             <div class="form-group mt-2">
