--- a/view/update.ejs
+++ b/view/update.ejs
@@ -42,29 +42,33 @@
             <div class="col-md-6 offset-md-3 mt-2">
                 <div class="card">
                     <div class="card-body">
-                        <form action="/updateTask" method="post" autocomplete="off">
+                        <form action="/updateTask/<%=task._id %>" method="post" autocomplete="off">
                             <div class="from-group mt-2">
                                 <label for="title">Title</label>
-                                <input type="text" name="title" id="title" class="form-control" required>
+                                <input type="text" name="title" id="title" class="form-control" value="<%= task.title%>" required>
                             </div>
                             <div class="form-group mt-2">
                                 <label for="content">content</label>
-                                <textarea name="content" id="content" cols="30" rows="10" class="form-control" required>
+                                <textarea name="content" id="content" cols="30" rows="10" class="form-control" value="<%= task.title%>"  required><%= task.content%> 
                                 </textarea>
                             </div>
 
                             <div class="form-group mt-2">
-                                <label for="start">Start Date</label>
-                                <input type="datetime-local" name="Start" id="Start" class="form-control" required>
+                                <label for="start">Start Date = <strong class="text-success"><%=task.start%></strong></label>
+                                <input type="datetime-local" name="Start" id="Start" class="form-control" value="<%= task.start%>"  required >
                             </div>
 
                             <div class="form-group mt-2">
-                                <label for="start">End Date</label>
-                                <input type="datetime-local" name="end" id="end" class="form-control" required>
+                                <label for="end">End Date = <strong class="text-success"><%=task.end%></label>
+                                <input type="datetime-local" name="end" id="end" class="form-control" value="<%= task.end%>"  required>
+                            </div>
+                            <div class="form-group mt-2">
+                                <label for="user">User name</label>
+                                <input type="text" name="user" id="user" class="form-control" value="<%= task.user%>"  required>
                             </div>
                       
                             <div class="form-group mt-2">
-                                <input type="submit" value="Create Task" class="btn btn-success">
+                                <input type="submit" value="Update Task" class="btn btn-success">
                             </div>
                         </form>
                     </div>
